Disable the toggle overview shortcut if a window is being dragged.

Bug: 900959
Change-Id: Iae62ce77d2fd38105120d86799e52157d6313f3c
Reviewed-on: https://chromium-review.googlesource.com/c/1313738
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605840}
Former-commit-id: ee1999fc53e953e313f5bea42e805f9bff5968fb